Refactor frontend API configuration to utilize environment variable for dynamic URL management
- Updated API routes in frontend services to use VITE_API_URL for better flexibility in different environments.
- Modified .env.example to clarify usage for local development and Vercel deployment.
- Adjusted SSE client connection URL to leverage the dynamic API_URL for real-time event handling.

--- a/apps/frontend/.env.example
+++ b/apps/frontend/.env.example
@@ -4,8 +4,10 @@
 # =============================================================================
 # API Configuration
 # =============================================================================
-# Backend API URL (used for production builds)
-VITE_API_URL=http://localhost:8080
-
-# SSE endpoint for real-time deploy events
-VITE_SSE_URL=http://localhost:8080/events/deploys
+# Backend API URL
+# - For local development: leave empty or set to http://localhost:8080
+# - For Vercel deployment: set to your backend URL (e.g., https://api.flowdeploy.com)
+#
+# IMPORTANT: When deploying to Vercel, configure this in the Vercel dashboard:
+# Settings > Environment Variables > Add VITE_API_URL
+VITE_API_URL=
