--- a/apps/backend/.env.example
+++ b/apps/backend/.env.example
@@ -117,6 +117,11 @@ SESSION_MAX_AGE=604800
 # Use secure cookies (set to true in production with HTTPS)
 SESSION_SECURE=false
 
+# Cookie domain for cross-subdomain authentication
+# Set to parent domain (e.g., ".connexto.com.br") when frontend and backend are on different subdomains
+# Leave empty for same-domain deployments
+COOKIE_DOMAIN=
+
 # Frontend URL (for redirects after OAuth)
 FRONTEND_URL=http://localhost:3000
 
