Add CORS support to backend configuration and deployment scripts
- Introduced CORS_ORIGINS environment variable in deployment scripts for flexible cross-origin resource sharing.
- Updated backend configuration to include CorsOrigins field for managing allowed origins.
- Modified server setup to utilize CORS settings dynamically based on the environment variable.
- Enhanced documentation to clarify the use of CORS settings in the backend environment.

--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -200,6 +200,7 @@ jobs:
           FRONTEND_URL: ${{ vars.FRONTEND_URL }}
           COOKIE_DOMAIN: ${{ vars.COOKIE_DOMAIN || '' }}
           SESSION_SECURE: ${{ vars.SESSION_SECURE || 'true' }}
+          CORS_ORIGINS: ${{ vars.CORS_ORIGINS || '*' }}
           CLOUDFLARE_SERVER_IP: ${{ vars.CLOUDFLARE_SERVER_IP || '' }}
           API_DOMAIN: ${{ env.API_DOMAIN }}
           TRAEFIK_NETWORK: ${{ env.TRAEFIK_NETWORK }}
