--- a/apps/backend/.env.example
+++ b/apps/backend/.env.example
@@ -17,6 +17,11 @@ PORT=8080
 # Logging verbosity: debug, info, warn, error
 LOG_LEVEL=info
 
+# CORS allowed origins (comma-separated)
+# Use specific origins for production (e.g., "https://deploy.connexto.com.br")
+# Use "*" for development (allows all origins, but disables credentials)
+CORS_ORIGINS=*
+
 # =============================================================================
 # Database
 # =============================================================================
