Enhance container and template management features in backend and frontend
- Updated Dockerfile to use the latest Alpine edge version for improved docker-cli compatibility.
- Added ContainerHandler and TemplateHandler to the dependency injection setup, enabling better management of container and template functionalities.
- Implemented new API endpoints for container operations, including listing, creating, starting, stopping, and removing containers.
- Introduced templates management with endpoints for listing, retrieving, and deploying templates.
- Enhanced frontend routing to include new Containers and Templates pages, improving user navigation and access to container management features.
- Updated app card component to display deployment progress, enhancing user feedback during container deployments.

--- a/apps/backend/Dockerfile
+++ b/apps/backend/Dockerfile
@@ -22,9 +22,10 @@ RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build \
     ./cmd/api
 
 # Stage 2: Production
-FROM alpine:3.19 AS production
+FROM alpine:edge AS production
 
 # Install runtime dependencies, create user and directories
+# Using edge to get latest docker-cli with API version 1.44+
 RUN apk add --no-cache \
     ca-certificates \
     git \
