Update Cloudflare client error handling and improve Docker deployment configuration
- Refactored error handling in the Cloudflare client to use constants for better readability and maintainability.
- Updated deployment scripts and Docker Compose configuration to utilize environment variables for database credentials, enhancing security and flexibility.
- Ensured the deployment script creates a .env file if it doesn't exist, streamlining the setup process.

--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -162,7 +162,7 @@ jobs:
           SERVER_HOST: ${{ vars.SERVER_HOST }}
           SERVER_PORT: ${{ vars.SERVER_PORT || '22' }}
           TRAEFIK_NETWORK: ${{ env.TRAEFIK_NETWORK }}
-          LETSENCRYPT_EMAIL: ${{ vars.LETSENCRYPT_EMAIL || 'admin@connexto.com.br' }}
+          LETSENCRYPT_EMAIL: ${{ vars.LETSENCRYPT_EMAIL || 'contato@connexto.com.br' }}
 
       - name: Deploy container
         run: |
@@ -204,7 +204,7 @@ jobs:
           CLOUDFLARE_SERVER_IP: ${{ vars.CLOUDFLARE_SERVER_IP || '' }}
           API_DOMAIN: ${{ env.API_DOMAIN }}
           TRAEFIK_NETWORK: ${{ env.TRAEFIK_NETWORK }}
-          LETSENCRYPT_EMAIL: ${{ vars.LETSENCRYPT_EMAIL || 'admin@connexto.com.br' }}
+          LETSENCRYPT_EMAIL: ${{ vars.LETSENCRYPT_EMAIL || 'contato@connexto.com.br' }}
 
       - name: Verify deployment
         run: |
