Enhance deployment scripts to support dynamic repository handling
- Added GITHUB_REPO environment variable to the deployment workflow for improved flexibility in repository management.
- Updated the deployment script to check for an existing Git repository before pulling the latest code, ensuring a more robust deployment process.

--- a/.github/workflows/deploy-compose.yml
+++ b/.github/workflows/deploy-compose.yml
@@ -67,6 +67,7 @@ jobs:
           POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
           POSTGRES_DB: ${{ vars.POSTGRES_DB }}
           DEPLOY_PATH: ${{ env.DEPLOY_PATH }}
+          GITHUB_REPO: ${{ github.repository }}
 
       - name: Verify deployment
         run: |
