--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -24,9 +24,9 @@ services:
     container_name: paasdeploy-postgres
     restart: unless-stopped
     environment:
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: paasdeploy
+      POSTGRES_PASSWORD: paasdeploy
+      POSTGRES_DB: paasdeploy
     volumes:
       - postgres-data:/var/lib/postgresql/data
       - ../apps/backend/migrations:/docker-entrypoint-initdb.d:ro
@@ -35,7 +35,7 @@ services:
     networks:
       - paasdeploy
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER}"]
+      test: ["CMD-SHELL", "pg_isready -U paasdeploy"]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -47,7 +47,7 @@ services:
     container_name: paasdeploy-backend
     restart: unless-stopped
     environment:
-      DATABASE_URL: postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB}?sslmode=disable
+      DATABASE_URL: postgres://paasdeploy:paasdeploy@postgres:5432/paasdeploy?sslmode=disable
       PORT: "8080"
       HOST: "0.0.0.0"
       LOG_LEVEL: info
