Add CertificateHandler and enhance API with certificate management features
- Introduced CertificateHandler to manage SSL certificate routes and status.
- Updated Application structure to include CertificateHandler, improving modularity.
- Enhanced API to support certificate listing and status retrieval.
- Added CertificateStatusBadge component in DomainManager for visual representation of certificate statuses.
- Refactored page-header and domain-manager components for improved layout and functionality.
- Updated Traefik configuration for certificate management and ACME support.

--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -3,6 +3,8 @@ services:
     image: traefik:v3.2
     container_name: paasdeploy-traefik
     restart: unless-stopped
+    environment:
+      ACME_EMAIL: ${ACME_EMAIL:-admin@localhost}
     ports:
       - "80:80"
       - "443:443"
@@ -11,6 +13,7 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock:ro
       - ./traefik/traefik.yml:/etc/traefik/traefik.yml:ro
       - traefik-logs:/var/log/traefik
+      - traefik-certs:/etc/traefik
     networks:
       - paasdeploy
     labels:
@@ -94,3 +97,4 @@ volumes:
   postgres-data:
   deploy-data:
   traefik-logs:
+  traefik-certs:
