--- a/deploy/traefik/traefik.yml
+++ b/deploy/traefik/traefik.yml
@@ -6,6 +6,11 @@ api:
 entryPoints:
   web:
     address: ":80"
+    http:
+      redirections:
+        entryPoint:
+          to: websecure
+          scheme: https
   websecure:
     address: ":443"
   traefik:
@@ -16,6 +21,14 @@ providers:
     endpoint: "unix:///var/run/docker.sock"
     exposedByDefault: false
     network: paasdeploy
+
+certificatesResolvers:
+  letsencrypt:
+    acme:
+      email: "${ACME_EMAIL}"
+      storage: /etc/traefik/acme.json
+      httpChallenge:
+        entryPoint: web
 
 log:
   level: INFO
