--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -41,6 +41,15 @@
     "react-router-dom": "^6.28.0",
     "tailwind-merge": "^2.5.5"
   },
+  "lint-staged": {
+    "*.{ts,tsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "*.css": [
+      "prettier --write"
+    ]
+  },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
     "@trivago/prettier-plugin-sort-imports": "^6.0.2",
