Enhance backend and frontend functionality for image and audit management
- Added ImageHandler and AuditHandler to the backend, enabling image and audit log management.
- Updated Application struct and dependency injection to include new handlers.
- Enhanced API routes to support image listing and audit log viewing.
- Introduced new frontend components and routes for managing Docker images and viewing audit logs, improving user experience and functionality.
- Refactored existing components to accommodate new features, ensuring a cohesive UI and consistent data handling.

--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     container_name: paasdeploy-traefik
     restart: unless-stopped
     environment:
-      ACME_EMAIL: ${ACME_EMAIL:-admin@localhost}
+      ACME_EMAIL: ${ACME_EMAIL:-contato@connexto.com.br}
     ports:
       - "80:80"
       - "443:443"
