--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dev:parallel": "turbo run dev",
     "build": "turbo run build",
     "lint": "turbo run lint",
+    "lint:frontend": "pnpm --filter @paasdeploy/frontend run lint",
     "typecheck": "turbo run typecheck",
     "test": "turbo run test",
     "backend:dev": "cd apps/backend && air",
@@ -18,7 +19,20 @@
     "docker:down": "docker compose -f deploy/docker-compose.yml down",
     "docker:logs": "docker compose -f deploy/docker-compose.yml logs -f",
     "docker:build": "docker compose -f deploy/docker-compose.yml build",
-    "clean": "turbo run clean && rm -rf node_modules"
+    "clean": "turbo run clean && rm -rf node_modules",
+    "typecheck:frontend": "pnpm --filter @paasdeploy/frontend run typecheck",
+    "lint:go": "cd apps/backend && golangci-lint run ./...",
+    "lint:go-quick": "cd apps/backend && golangci-lint run --fast --timeout=2m ./...",
+    "precommit:local": "pnpm -w lint-staged && pnpm run lint:go-quick && pnpm run typecheck:frontend"
+  },
+  "lint-staged": {
+    "apps/frontend/**/*.{ts,tsx}": [
+      "pnpm --filter @paasdeploy/frontend run lint:fix",
+      "pnpm --filter @paasdeploy/frontend run format:check"
+    ],
+    "apps/frontend/**/*.css": [
+      "pnpm --filter @paasdeploy/frontend run format:check"
+    ]
   },
   "devDependencies": {
     "husky": "^9.1.7",
