Enhance agent and backend integration with gRPC support and SSH credential management
- Introduced gRPC server functionality in the agent, allowing for health checks and control commands.
- Updated backend configuration to include agent gRPC port and related settings.
- Enhanced server model to support SSH password alongside SSH key for improved authentication flexibility.
- Implemented health check endpoint for servers, enabling connectivity diagnostics.
- Updated frontend components to accommodate SSH password input and validation.
- Refactored provisioning logic to utilize both SSH key and password for server setup.
- Enhanced documentation to reflect new features and usage instructions for gRPC and SSH credentials.

--- a/apps/backend/.env.example
+++ b/apps/backend/.env.example
@@ -50,6 +50,24 @@ HEALTH_CHECK_TIMEOUT=60
 HEALTH_CHECK_RETRIES=3
 
 # =============================================================================
+# gRPC
+# =============================================================================
+# Enable gRPC server for agent connections
+GRPC_ENABLED=false
+
+# Backend gRPC port
+GRPC_PORT=50051
+
+# Public address reachable by agents (host:port)
+GRPC_SERVER_ADDR=
+
+# Path to agent binary for provisioning
+AGENT_BINARY_PATH=
+
+# Agent gRPC port used for health checks and deploy control
+AGENT_GRPC_PORT=50052
+
+# =============================================================================
 # Docker
 # =============================================================================
 # Docker daemon socket path
