Enhance backend deployment and SSH provisioning with gRPC support
- Added gRPC server address configuration to the deployment script and Docker Compose setup.
- Updated backend Dockerfile to include agent binary and necessary environment variables for gRPC.
- Refactored SSH provisioning logic to utilize SFTP for file transfers and systemd unit management.
- Implemented encryption for SSH credentials during server updates, improving security.
- Enhanced documentation to reflect new SSH provisioning steps and gRPC integration details.

--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -133,7 +133,7 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
-          context: ./apps/backend
+          context: .
           file: ./apps/backend/Dockerfile
           push: true
           tags: ${{ steps.meta.outputs.tags }}
@@ -204,6 +204,7 @@ jobs:
           CLOUDFLARE_SERVER_IP: ${{ vars.CLOUDFLARE_SERVER_IP || '' }}
           API_DOMAIN: ${{ env.API_DOMAIN }}
           TRAEFIK_NETWORK: ${{ env.TRAEFIK_NETWORK }}
+          GRPC_SERVER_ADDR: ${{ vars.GRPC_SERVER_ADDR || format('{0}:50051', env.API_DOMAIN) }}
           LETSENCRYPT_EMAIL: ${{ vars.LETSENCRYPT_EMAIL || 'contato@connexto.com.br' }}
 
       - name: Verify deployment
